--- a/src/you won.html
+++ b/src/you won.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="centerthis">
-        <button class="btn btn-5" onclick="changeInWin()">Hover</button> 
+        <button class="btn btn-5" onclick="changeInWin()">Play Again!</button> 
     </div>
 </body>
 </html>
