--- a/src/you lose.html
+++ b/src/you lose.html
@@ -10,6 +10,8 @@
     <!--Google Font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    
+    <link rel="icon" type="image/x-icon" href="/rock.ico">
     <!--Stylesheet-->
     <title>You Lose</title>
 </head>
